# PennyLane

./: .gitignore  README.md  iqc25-cw-B290143.ipynb  pyproject.toml  setup.py
src/pennylaneplus/: __init__.py  simple_circuit_example.ipynb
