[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pennylaneplus"
version = "0.1.0"
description = "Use PennyLane for Quantum Simulations."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Kailen Hargenrader", email = "khargenr@caltech.edu"}]

dependencies = [
    "numpy",
    "pennylane",
    "matplotlib",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pennylaneplus*"]
